# HaGezaBlog

./: .gitignore  404.html  README.md  index.html
.github/workflows/: deploy.yaml
_app/: version.json
_app/immutable/assets/: 0.5rF1OWmZ.css
_app/immutable/chunks/: B2G74MyZ.js  B8A9NhAT.js  BbFEqnHT.js  BldsCJr1.js  C183Kb8v.js  CSzKe34m.js  CZNf7l2p.js  CyvSOsIO.js  Vfbyfug6.js  _hsPAK6u.js  f21HpiVl.js  hMjTsX2i.js  xEVRynu4.js
_app/immutable/entry/: app.CyHcaqJd.js  start.DlQoi62M.js
_app/immutable/nodes/: 0.BDTGjwre.js  1.BMSQi87c.js  2.B68NW6YI.js  3.DFfdHnAT.js
app/: README.md  package-lock.json  package.json  svelte.config.js
app/src/: app.d.ts
app/src/components/: Card.svelte
app/src/lib/posts/: dummy.svelte
app/src/routes/: +layout.svelte  +page.js  +page.svelte  layout.css  style.css  theme.css
app/src/routes/posts/[slug]/: +page.js  +page.svelte
app/static/templates/: sim_loader.html
posts/dummy/: index.html
rs_progs/: Cargo.toml  rustfmt.toml
rs_sims/: Cargo.toml  config.yaml  justfile
rs_sims/src/: camera_w_controls.rs  config.rs  lib.rs
wasm/: electro_magnetic.wasm  hello_world.wasm  sims.wasm
